# Kaido

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  run_tests.ps1  run_tests.sh  setup.ps1  setup.sh
kaido/: __init__.py  __main__.py  mcp_client.py
tests/: google_search_bing.test.md  saucedemo.md
